tests/textual/error/divideInteger-pair-integer--integer--wrong-1st-argument.uplc
(program 1.0.0[[(builtin divideInteger)(con pair(integer)(integer) (90, 93))](con integer 10)])